tests/ui/pattern/usefulness/issue-30240.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-30240.rs:2:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&str`
help: ensure that all possible cases are being handled by adding an arm to handle the `&_` case
   |
LL ~         "hello" => {},
LL +         &_ => { todo!() },
   |

error[E0004]: match is non-exhaustive
  --> $DIR/issue-30240.rs:6:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&str`
help: ensure that all possible cases are being handled by adding an arm to handle the `&_` case
   |
LL ~         "hello" => {}
LL +         &_ => { todo!() },
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
