tests/ui/pattern/usefulness/issue-30240.rs
fn main() {
    match "world" { //~ ERROR match is non-exhaustive
        "hello" => {}
    }

    match "world" { //~ ERROR match is non-exhaustive
        ref _x if false => {}
        "hello" => {}
    }
}
